--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="colorPrimaryLight">#FFCDD2</color>
     <color name="colorAccent">#448AFF</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="colorBlack">#212121</color>
+    <color name="colorDarkGrey">#757575</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorLightGrey">#BDBDBD</color>
 </resources>
