--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="dietbisabesok.com.bukanitip.activity.login.LoginScreenActivity">
     <ImageView
         android:padding="16dp"
@@ -19,33 +19,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.design.widget.TextInputLayout
+            android:fontFamily="sans-serif"
             android:layout_marginTop="8dp"
-            android:id="@+id/input_layout_email"
+            android:id="@+id/login_layout_email"
+            app:errorEnabled="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
+                android:maxLines="1"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@color/colorLightGrey"
-                android:id="@+id/input_email"
+                android:id="@+id/login_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:hint="@string/hint_username" />
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
+            android:fontFamily="sans-serif"
+            android:id="@+id/login_layout_password"
             android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
             <EditText
+                android:maxLines="1"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/colorBlack"
                 android:textColorHint="@color/colorLightGrey"
-                android:id="@+id/input_password"
+                android:id="@+id/login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="@string/hint_password" />
         </android.support.design.widget.TextInputLayout>
         <Button
+            android:id="@+id/login_btn_submit"
             android:textSize="20dp"
             android:layout_marginTop="16dp"
             android:textColor="@color/colorWhite"
