--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="colorPrimaryLight">#FFCDD2</color>
-    <color name="colorAccent">#448AFF</color>
+    <color name="colorAccent">#0089ab</color>
     <color name="colorBlack">#212121</color>
     <color name="colorDarkGrey">#757575</color>
     <color name="colorWhite">#FFFFFF</color>
