--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,7 @@
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
+    <style name="tabTextApperance" parent="android:TextAppearance.Widget.TextView">
+        <item name="android:textSize">@dimen/text_size_tab</item>
+    </style>
 </resources>
