--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -22,6 +22,7 @@
                 android:layout_alignParentStart="true"></FrameLayout>
         </RelativeLayout>
         <com.roughike.bottombar.BottomBar
+            android:visibility="gone"
             android:id="@+id/home_bottom_bar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
