--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:animateLayoutChanges="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
+        android:layout_height="wrap_content"
+        app:contentScrim="?attr/colorPrimary">
+        <include
+            android:id="@+id/home_toolbar"
+            layout="@layout/acitivity_toolbar" />
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v4.widget.NestedScrollView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/myScrollingContent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:id="@+id/home_fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <include
-                android:id="@+id/home_toolbar"
-                layout="@layout/acitivity_toolbar" />
-            <FrameLayout
-                android:id="@+id/home_fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorWhite"
-                android:layout_below="@id/home_toolbar"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"></FrameLayout>
-        </RelativeLayout>
-        <com.roughike.bottombar.BottomBar
-            android:visibility="gone"
-            android:id="@+id/home_bottom_bar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom"
-            app:bb_behavior="shy"
-            app:bb_tabXmlResource="@xml/tab_menu"
-            app:bb_titleTextAppearance="@style/tabTextApperance" />
-    </android.support.design.widget.CoordinatorLayout>
-</merge>
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite"
+            android:layout_below="@id/home_toolbar"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"></FrameLayout>
+    </android.support.v4.widget.NestedScrollView>
+    <com.roughike.bottombar.BottomBar
+        app:layout_anchorGravity="bottom"
+        android:id="@+id/home_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="bottom"
+        app:bb_behavior="shy"
+        app:bb_tabXmlResource="@xml/tab_menu"
+        app:bb_titleTextAppearance="@style/tabTextApperance" />
+</android.support.design.widget.CoordinatorLayout>
