Add image slide on home fragment

--- a/app/src/main/res/xml/tab_menu.xml
+++ b/app/src/main/res/xml/tab_menu.xml
@@ -5,6 +5,14 @@
         icon="@drawable/ic_home_grey600_24dp"
         title="Home" />
     <tab
+        id="@+id/request"
+        icon="@drawable/ic_account_grey600_24dp"
+        title="My Request" />
+    <tab
+        id="@+id/trip"
+        icon="@drawable/ic_account_grey600_24dp"
+        title="My Trip" />
+    <tab
         id="@+id/Profile"
         icon="@drawable/ic_account_grey600_24dp"
         title="Profile" />
