display list countries dummy

--- a/app/src/main/res/layout/activity_show_all_countries.xml
+++ b/app/src/main/res/layout/activity_show_all_countries.xml
@@ -11,9 +11,10 @@
             layout="@layout/activity_toolbar"
             android:id="@+id/all_countries_toolbar"/>
     </android.support.design.widget.AppBarLayout>
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.RecyclerView
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:id="@+id/all_countries_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v4.widget.NestedScrollView>
+    </android.support.v7.widget.RecyclerView>
 </android.support.design.widget.CoordinatorLayout>
