--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#1565C0</color>
     <color name="colorPrimaryLight">#90CAF9</color>
     <color name="colorAccent">#1565C0</color>
-    <color name="colorRed">#D32F2F</color>
+    <color name="colorRed">#C51162</color>
     <color name="colorBlack">#212121</color>
     <color name="colorDarkGrey">#757575</color>
     <color name="colorWhite">#FFFFFF</color>
