--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -29,6 +29,7 @@
             android:layout_alignParentStart="true"></FrameLayout>
     </android.support.v4.widget.NestedScrollView>
     <com.github.clans.fab.FloatingActionMenu
+        android:id="@+id/home_screen_floating_action_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom|right"
@@ -72,14 +73,14 @@
                 android:id="@+id/menu_my_request"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_home_white_24dp"
+                android:src="@drawable/ic_wallet_giftcard_white_24dp"
                 fab:fab_size="mini"
                 fab:fab_label="Add new request" />
             <com.github.clans.fab.FloatingActionButton
                 android:id="@+id/menu_my_trip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_home_white_24dp"
+                android:src="@drawable/ic_car_white_24dp"
                 fab:fab_size="mini"
                 fab:fab_label="Add new trip" />
         </com.github.clans.fab.FloatingActionMenu>
