update user info to local db close fab when intent new activity

--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -28,7 +28,7 @@
                 android:textSize="14dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lihat Semua"/>
+                android:text="View All"/>
         </RelativeLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/section_recycleview"
