--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -58,9 +58,9 @@
         <Button
             android:id="@+id/login_btn_submit"
             android:textSize="20dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:textColor="@color/colorWhite"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorRed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login"/>
