--- a/app/src/main/res/layout/item_trending_country.xml
+++ b/app/src/main/res/layout/item_trending_country.xml
@@ -2,8 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_margin="16dp"
     android:layout_width="100dp"
+    android:padding="6dp"
     android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="vertical"
