--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -29,6 +29,7 @@
             android:layout_alignParentStart="true"></FrameLayout>
     </android.support.v4.widget.NestedScrollView>
     <com.github.clans.fab.FloatingActionMenu
+        app:layout_behavior="dietbisabesok.com.bukanitip.helper.FloatingActionMenuBehavior"
         android:id="@+id/home_screen_floating_action_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
