disable scrolling recycleview inside nested scrollview

--- a/app/src/main/res/layout/activity_add_new_request.xml
+++ b/app/src/main/res/layout/activity_add_new_request.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
@@ -21,7 +22,7 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="120dp"
                 android:background="@color/colorPrimary"/>
             <android.support.design.widget.TextInputLayout
                 android:layout_marginTop="8dp"
