--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -26,7 +26,7 @@
             android:layout_below="@id/home_toolbar"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"></FrameLayout>
+            android:layout_alignParentStart="true"/>
     </android.support.v4.widget.NestedScrollView>
     <com.github.clans.fab.FloatingActionMenu
         app:layout_behavior="dietbisabesok.com.bukanitip.helper.FloatingActionMenuBehavior"
