--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -31,6 +31,7 @@
                 android:text="View All"/>
         </RelativeLayout>
         <android.support.v7.widget.RecyclerView
+            android:nestedScrollingEnabled="false"
             android:id="@+id/section_recycleview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
