--- a/app/src/main/res/layout/item_section_second.xml
+++ b/app/src/main/res/layout/item_section_second.xml
@@ -31,6 +31,7 @@
                 android:text="View All"/>
         </RelativeLayout>
         <android.support.v7.widget.RecyclerView
+            android:nestedScrollingEnabled="false"
             android:layout_margin="16dp"
             android:id="@+id/section_second_recycleview"
             android:layout_width="match_parent"
