--- a/app/src/main/res/layout/item_trending_country.xml
+++ b/app/src/main/res/layout/item_trending_country.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:scaleType="fitXY"
             android:id="@+id/country_thumbnail_imageview"
             android:layout_width="match_parent"
             android:layout_height="70dp"
