--- a/app/src/main/res/layout/activity_add_new_request.xml
+++ b/app/src/main/res/layout/activity_add_new_request.xml
@@ -20,7 +20,8 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
+            <ImageButton
+                android:id="@+id/new_request_choose_picture"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:background="@color/colorPrimary"/>
@@ -31,6 +32,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:maxLines="1"
+                    android:inputType="text"
+                    android:id="@+id/new_request_title"
                     android:paddingBottom="12dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -43,6 +47,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:id="@+id/new_request_country"
                     android:paddingBottom="12dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -55,6 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:id="@+id/new_request_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Description"/>
@@ -66,6 +74,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:inputType="numberDecimal"
+                    android:id="@+id/new_request_bugdet"
                     android:paddingBottom="12dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -75,6 +85,7 @@
 
     </android.support.v4.widget.NestedScrollView>
     <Button
+        android:id="@+id/new_request_submit"
         android:textSize="16dp"
         android:textColor="@color/colorWhite"
         android:background="@color/colorRed"
