--- a/app/src/main/res/layout/item_all_request.xml
+++ b/app/src/main/res/layout/item_all_request.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:id="@+id/my_request_imageview"
+                android:id="@+id/all_request_imageview"
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -31,6 +31,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:visibility="gone"
                     android:gravity="end"
                     android:layout_centerVertical="true"
                     android:id="@+id/all_request_username"
