--- a/app/src/main/res/layout/item_trending_country.xml
+++ b/app/src/main/res/layout/item_trending_country.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
+    android:id="@+id/country_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="100dp"
+    android:layout_width="match_parent"
+    android:layout_margin="8dp"
     android:padding="6dp"
-    android:layout_height="wrap_content">
+    app:cardElevation="0dp"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -26,4 +30,4 @@
             android:layout_height="wrap_content"
             android:text="Indonesia"/>
     </LinearLayout>
-</LinearLayout>
+</android.support.v7.widget.CardView>
