--- a/app/src/main/res/layout/item_all_request.xml
+++ b/app/src/main/res/layout/item_all_request.xml
@@ -6,6 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <android.support.v7.widget.CardView
+        android:id="@+id/all_request_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
