--- a/app/src/main/res/layout/item_trending_request.xml
+++ b/app/src/main/res/layout/item_trending_request.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/trending_request_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_margin="16dp"
