--- a/app/src/main/res/layout/fragment_my_request.xml
+++ b/app/src/main/res/layout/fragment_my_request.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.RecyclerView
+    android:background="@color/colorWhite"
     android:nestedScrollingEnabled="false"
     android:id="@+id/my_request_recyclerview"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 </android.support.v7.widget.RecyclerView>
