--- a/app/src/main/res/layout/activity_add_new_request.xml
+++ b/app/src/main/res/layout/activity_add_new_request.xml
@@ -7,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include
@@ -26,6 +27,7 @@
         android:text="Submit"/>
 
     <android.support.v4.widget.NestedScrollView
+        android:layout_below="@id/appbar"
         android:layout_above="@+id/new_request_submit"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -61,8 +63,25 @@
                     android:maxLines="1"
                     android:paddingBottom="12dp" />
             </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:textSize="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="19dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Country"/>
+            <Spinner
+                android:id="@+id/new_request_spinner"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </Spinner>
 
             <android.support.design.widget.TextInputLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
