--- a/app/src/main/res/layout/activity_add_new_offering.xml
+++ b/app/src/main/res/layout/activity_add_new_offering.xml
@@ -24,6 +24,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:inputType="numberDecimal"
+                    android:maxLines="1"
                     android:id="@+id/new_offering_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -42,6 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <EditText
+                    android:inputType="text"
+                    android:maxLines="1"
                     android:id="@+id/new_offering_day_estimation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
